# Universal-Object-Mapping

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.daytona.override.yml  docker-compose.langgraph.override.yml  docker-compose.prod.yml  docker-compose.yml  langgraph-override.compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  ty.toml
.devcontainer/: devcontainer.json
ORMConvertor/: ORMConvertor.sln  README.md  database.Dockerfile  docker-compose.yml
ORMConvertor/AbstractWrappers/: AbstractEntityBuilder.cs  IParser.cs  IQueryParser.cs
ORMConvertor/Advisor/: Advisor.cs  Advisor.csproj  build_native.ps1
ORMConvertor/AdvisorBenchmarking/: AdvisorBenchmarking.csproj  BenchmarkExecutor.cs  (+14 more)
app/: globals.css  layout.tsx
benchmarks/: .editorconfig  .gitignore  ORMComparision.sln  README.md
components/: theme-toggle.tsx
diagrams/: uom_diagrams.drawio
hooks/: use-chat-history.ts  use-chat-stream.ts
lib/: frameworks.ts  langgraph-client.ts  storage.ts  types.ts  utils.ts
llm-advisor-ui/: package-lock.json  package.json
notes/: architecture.md  future_specification.md  orchestrator-architecture.md
scripts/: destroy-containers.sh  init-project.sh  update-submodules.sh
services/orchestrator/: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  Makefile  README.md  aimock.json  custom_entrypoint.sh  docker-compose.yml  langgraph-prod.json  langgraph.json  main.py  pyproject.toml  run_acp_agent.sh  setup_ssh_tunnel.sh
services/orchestrator/.github/workflows/: integration-tests.yml
services/orchestrator/scripts/: copy_snippets_to_context.sh  daytona-setup-proxy-dns.ps1  install_logdy.sh  install_node.sh  load_env.ps1
services/orchestrator/src/config/: database_tools.yaml  model_profiles.json
services/orchestrator/src/config/db_toolbox/: default_config.yaml
services/orchestrator/src/context/mappings/: mssql_mongodb.relmig  mssql_neo4j.json
services/orchestrator/src/context/snippets/: DapperQueryEntrypoint.cs  DapperSchemaValidationEntrypoint.cs  EFCoreQueryEntrypoint.cs  EFCoreSchemaValidationEntrypoint.cs  MongoQueryEntrypoint.java  MongoSchemaValidationEntrypoint.java  NHibernateQueryEntrypoint.cs  NHibernateSchemaValidationEntrypoint.cs  Neo4jQueryEntrypoint.java  Neo4jSchemaValidationEntrypoint.java  Sandbox.csproj  input-dapper-mongodb.txt  input-efcore-neo4j.txt  mongo-pom.xml  neo4j-pom.xml  pom.xml
services/orchestrator/src/react_agent/: __init__.py  constants.py  context.py  graph.py  prompts.py  state.py  tools.py  utils.py
services/orchestrator/src/react_agent/custom_tools/: docs_search.py  dotnet_validator.py  java_validator.py  mcp_database.py  query_validator.py  sandbox_tools.py  ssh_tools.py
services/orchestrator/src/react_agent/utils/: __init__.py  deterministic_checks.py  preprocessing.py  request_logging.py  sandboxes.py  types.py  utils.py
services/orchestrator/src/server/: main.py
services/orchestrator/src/uom_acp/: main.py  uom_deep_agent.py
services/orchestrator/src/uom_deep_agent/: local_context.py  uom_agent.py
services/orchestrator/tests/: conftest.py
services/orchestrator/tests/aimock/deep-agent/: openai-2026-05-26T14-05-55-614Z-d2c4b8f4.json  openai-2026-05-26T14-06-02-104Z-9b7b58ec.json  openai-2026-05-26T14-11-57-108Z-8472c0e7.json  openai-2026-05-26T15-04-23-589Z-bf340f38.json
services/orchestrator/tests/aimock/efcore-mongo/: openai-2026-05-18T14-22-13-363Z-4ade2f86.json  openai-2026-05-18T14-36-45-087Z-82fee2a5.json  openai-2026-05-18T18-34-34-951Z-06ee501f.json  openai-2026-05-18T18-46-27-956Z-d66a2725.json  openai-2026-05-18T19-02-19-680Z-d7630a38.json  openai-2026-05-19T21-49-05-074Z-a5909cbf.json  openai-2026-05-26T11-57-06-270Z-ae50df6e.json  openai-2026-05-26T11-57-33-151Z-7e0c48e9.json  openai-2026-05-26T11-57-41-934Z-17e95438.json  openai-2026-05-26T11-57-46-413Z-73f8f7fc.json  openai-2026-05-26T11-58-06-084Z-645b7cbf.json  openai-2026-05-26T11-58-24-177Z-7117441f.json  openai-2026-05-26T11-58-47-190Z-bb384e9e.json  openai-2026-05-26T11-58-55-154Z-972b18ee.json  openai-2026-05-26T12-02-09-696Z-0a6f844e.json  openai-2026-05-26T12-13-15-708Z-c4a66a3c.json  openai-2026-05-26T12-16-17-651Z-76575e6d.json
services/orchestrator/tests/aimock/efcore-neo4j/: openai-2026-05-26T18-08-52-371Z-eb3f3f00.json  openai-2026-05-27T12-35-35-614Z-e94a9224.json  openai-2026-05-27T12-36-07-886Z-07cfac3f.json  openai-2026-05-27T12-36-13-031Z-1943b64e.json  openai-2026-05-27T12-36-34-825Z-fd554e37.json  openai-2026-05-27T12-36-47-383Z-94c2ce6f.json  openai-2026-05-27T12-36-56-223Z-f7a80512.json  openai-2026-05-27T12-39-00-491Z-58ef69f4.json
services/orchestrator/tests/aimock/recorded/: openai-2026-05-18T14-43-22-776Z-977bb815.json  openai-2026-05-18T15-45-33-573Z-f3a81e0b.json  openai-2026-05-18T18-29-35-303Z-51bd8429.json  openai-2026-05-18T18-29-42-674Z-5b9bea16.json  openai-2026-05-18T18-29-46-873Z-3dcf49cf.json  openai-2026-05-18T18-29-53-017Z-a44e3e50.json  openai-2026-05-18T18-46-27-956Z-d66a2725.json  openai-2026-05-18T18-58-34-786Z-8431ae78.json  openai-2026-05-20T12-32-42-585Z-e3e45669.json  openai-2026-05-20T12-56-50-675Z-c73680fc.json  openai-2026-05-20T13-34-04-789Z-127906b3.json  openai-2026-05-20T13-38-37-969Z-ce2d0ed8.json  openai-2026-05-20T15-10-28-405Z-679cd10e.json
services/orchestrator/tests/cassettes/: openai-2026-05-18T14-22-44-025Z-f58a2614.json  openai-2026-05-18T14-22-47-967Z-436fe6c7.json  openai-2026-05-18T14-22-54-825Z-e3eed9e1.json  openai-2026-05-18T14-23-02-614Z-c38a4b9e.json  openai-2026-05-18T14-23-17-762Z-88bd7006.json  openai-2026-05-18T14-36-45-087Z-82fee2a5.json  openai-2026-05-18T18-58-34-786Z-8431ae78.json
services/orchestrator/tests/fixtures/: efcore_results.json  input-efcore-mongodb-q1.txt  input-efcore-mongodb.txt  input-nhibernate-mongodb.txt  mongo_results.json
services/orchestrator/tests/integration_tests/: test_api.py  test_deepdiff_validator.py  test_graph.py  test_mcp_database.py  test_sandboxed_validation.py  test_tools.py
services/orchestrator/tests/unit_tests/: test_configuration.py  test_state.py  test_utils.py
(+306 files in other folders)
