[project]
name = "uom-orchestrator"
version = "0.0.1"
description = "LLM Orchestrator for Universal Object Mapping using LangGraph"
authors = [{ name = "Martin Čorovčák", email = "martincorovcak@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "ollama>=0.6.1",
    "langchain-ollama>=0.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=0.1.0",
    "toolbox-langchain>=0.6.0",
    "httpx>=0.27.0",
    "motor>=3.6.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ty>=0.0.23", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
    "D401",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["old/*"]

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "debugpy>=1.8.20",
    "langgraph-cli[inmem]>=0.4.15",
    "pytest>=8.3.5",
    "ty>=0.0.23",
]

[tool.ty.src]
include = ["src", "tests"]
