[project]
name = "uom-orchestrator"
version = "0.0.1"
description = "LLM Orchestrator for Universal Object Mapping using LangGraph"
authors = [{ name = "Martin Čorovčák", email = "martincorovcak@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph>=1.1.10",
    "langchain>=1.2.17",
    "langchain-fireworks>=1.3.0",
    "python-dotenv>=1.2.2",
    "langchain-tavily>=0.2.18",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.3",
    "ollama>=0.6.2",
    "langchain-ollama>=1.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "toolbox-langchain>=1.0.0",
    "httpx>=0.28.1",
    "pymongo>=4.17.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "deepagents>=0.5.6",
    "langfuse>=4.5.1",
    "langchain-litellm>=0.6.4",
    "aiofiles>=24.1.0",
    "types-aiofiles>=25.1.0.20260409",
    "orjson>=3.11.8",
    "deepdiff[optimize]>=9.0.0",
    "logfire[httpx]>=4.32.1",
    "daytona>=0.171.0",
]
# external-dependencies = [
#     "pkg:generic/node@24",
#     "pkg:generic/npm@11",
# ]

[project.optional-dependencies]
dev = ["ty>=0.0.23", "ruff>=0.6.1"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "debugpy>=1.8.20",
    "langgraph-cli[inmem]>=0.4.24",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "python-json-logger>=4.1.0",
    "ty>=0.0.34",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
    "D401",
    "D106",
    "D107",
    "D101",
    "D102",
    "F841",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["old/*"]
markers = [
    "integration: requires running Docker services",
    "vcr: uses vcrpy to record/replay HTTP interactions",
]
log_cli = true

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["tests"]

[tool.ty.overrides.rules]
missing-typed-dict-key = "warn"
invalid-key = "warn"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = "none"

[tool.logfire]
pydantic_plugin_record = "all"
