[project]
name = "uom-orchestrator"
version = "0.0.1"
description = "LLM Orchestrator for Universal Object Mapping using LangGraph"
authors = [{ name = "Martin Čorovčák", email = "martincorovcak@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
    "python-dotenv>=1.2.2",
    "langchain-tavily>=0.2.18",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.3",
    "ollama>=0.6.2",
    "langchain-ollama>=1.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "toolbox-langchain>=1.0.0",
    "httpx>=0.28.1",
    "deepagents>=0.5.6",
    "langfuse>=4.6.1",
    "aiofiles>=24.1.0",
    "types-aiofiles>=24.1.0",
    "orjson>=3.11.8",
    "deepdiff[optimize]>=9.0.0",
    "logfire[httpx,requests]>=4.32.1",
    "daytona>=0.174.0",
    "python-json-logger>=4.1.0",
    "redis>=7.4.0",
    "langchain-redis>=0.2.5",
    "langchain-community>=0.4.1",
    "langgraphics>=0.1.0b3",
    "langgraph-api>=0.8.7",
    "structlog>=25.5.0",
    "deepagents-acp>=0.0.6",
    "langchain-daytona>=0.0.6",
]
# external-dependencies = [
#     "pkg:generic/node@24",
#     "pkg:generic/npm@11",
# ]

[project.optional-dependencies]
opt = ["rich>=15.0.0"]

[dependency-groups]
dev = [
    "aimock-pytest>=0.4.0",
    "anyio>=4.13.0",
    "debugpy>=1.8.20",
    "langgraph-cli[inmem]>=0.4.24",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.15.13",
    "ty>=0.0.34",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "langgraph.templates.react_agent",
    "react_agent",
    "uom_deep_agent",
    "uom_acp",
]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"
"uom_deep_agent" = "src/uom_deep_agent"
"uom_acp" = "src/uom_acp"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
    "D401",
    "D106",
    "D107",
    "D101",
    "D102",
    "F841",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["old/*"]
markers = [
    "integration: requires running Docker services",
    "vcr: uses vcrpy to record/replay HTTP interactions",
]
addopts = "-s"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
# log_file = "test.log"
# log_file_level = "DEBUG"
# log_file_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
unused-ignore-comment = "ignore"

[[tool.ty.overrides]]
include = ["tests"]

[tool.ty.overrides.rules]
missing-typed-dict-key = "warn"
invalid-key = "warn"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = "none"
